<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FFF"
    android:padding="5dp" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/myHeightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_height_bmi" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/input_bmi" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/myWeightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_weight_bmi" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/input_bmi" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioGroup
            android:id="@+id/grpRadioButton"
            android:orientation="horizontal"
            android:checkedButton="@+id/lbsinchRadioButton" >

        <RadioButton
            android:id="@+id/kgsmtsRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kgs_mts_bmi" />

        <RadioButton
            android:id="@+id/lbsinchRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbs_inch_bmi" />
        
		</RadioGroup>
		
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/bmiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calulate_bmi" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_bmi" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/bmiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_text" />

        <EditText
            android:id="@+id/bmiEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:text="@string/input_bmi" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bmiScaleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_bmi"
            android:text="@string/bmi_scale" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_bmi"
            android:text="@string/bmi_result" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/underWeightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underweight_bmi" />

        <TextView
            android:id="@+id/underWeightResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undeweight_result_bmi" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/normalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_bmi" />

        <TextView
            android:id="@+id/normalResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_result_bmi" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/overWeightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overweight_bmi" />

        <TextView
            android:id="@+id/overWeightResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overweight_result_bmi" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/obeseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obese_bmi" />

        <TextView
            android:id="@+id/obeseResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obese_result_bmi" />

    </TableRow>

</TableLayout>
